# twolame

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  NEWS.md  README  README.md  TODO  autogen.sh  bootstrap.sh  configure.ac  configure.in  twolame.pc.in  twolame.spec.in
.github/workflows/: build.yml
debian/: Makefile.am  changelog  control  copyright  libtwolame0-dev.examples  libtwolame0-dev.files  libtwolame0.docs  libtwolame0.files  rules  twolame.docs  twolame.files  twolame.install
doc/: Makefile.am  api.txt  asciidoc.conf  doxygen.conf  index.txt  make-html.sh  psycho.txt  twolame.1  twolame.1.txt  vbr.txt
doc/dist10-text/: common.text  common.txt  commonh.text  encode.text  encoderh.text  musicin.text  psy.text  tonal.text  tonal.txt
doc/html/: Doxyfile.in  Makefile.am  api.html  authors.html  changes.txt  index.html  news.html  psycho.html  readme.html  todo.html  twolame_8h-source.html  twolame_8h.html  vbr.html
frontend/: CMakeLists.txt  Makefile.am  audioin_raw.c  audioin_sndfile.c  frontend.c  frontend.h  parse_args.c
libtwolame/: CMakeLists.txt  Makefile.am  ath.c  ath.h  availbits.c  availbits.h  bitbuffer.c  bitbuffer.h  bitbuffer_inline.h  common.h  crc.c  crc.h  dab.c  dab.h  encode.c  encode.h  energy.c  energy.h  enwindow.h  fft.c  fft.h  get_set.c  libtwolameConfig.cmake.in  mem.c  mem.h  psycho_0.c  psycho_0.h  psycho_1.c  psycho_1.h  psycho_1_critband.h  psycho_1_freqtable.h  psycho_2.c  psycho_2.h  psycho_2_absthr.h  psycho_3.c  psycho_3.h  psycho_4.c  psycho_4.h  psycho_n1.c  psycho_n1.h  (+6 more)
simplefrontend/: CMakeLists.txt  Makefile.am  audio_wave.c  audio_wave.h  simplefrontend.c
src/: Makefile.am
src/frontend/: Makefile.am  audio.c  audio.h  audio_aiff.c  audio_wave.c  frontend.c  frontend.h
src/libtwolame/: Makefile.am  ath.c  availbits.c  bitbuffer.c  common.h  crc.c  dab.c  encode.c  encode.h  energy.c  fft.c  get_set.c  mem.c  psycho_0.c  psycho_1.c  psycho_2.c  psycho_3.c  psycho_4.c  psycho_n1.c  subband.c  subband.h  tables.c  tables.h  twolame.c  twolame.h  twolame_global.h  util.c  util.h  version.c
src/simplefrontend/: Makefile.am  audio_wave.c  audio_wave.h
tests/: Makefile.am  test.pl
